# YandexAQA

./: .gitignore  Dockerfile  Makefile  README.md  info.md  pyproject.toml  task.md
tests/: .env  conftest.py
tests/test_pubic_resources/: test_get_info.py
tests/test_resources/: test_copy.py  test_create_folder.py  test_download.py  test_get_metadata.py  test_publish_resources.py  test_unpublich_resources.py
tests/test_trash/: test_delete_trash.py  test_get_trash.py
